[package]
name = "sqll"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Funk <stephenlfunk@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
